Tweaked the popover postions to avoid going off screen for #1974
The popovers should now have more consistent positions instead of poping over
haphazardly.

--- a/app/styles/play/level/tome/spell_palette_entry.sass
+++ b/app/styles/play/level/tome/spell_palette_entry.sass
@@ -50,7 +50,8 @@ body:not(.dialogue-view-active)
   .spell-palette-popover.popover
     right: 45%
     min-width: 500px
-    margin-top: -17%
+    //margin-top: -17%
+    margin: -17% 0 17% auto
 
 .spell-palette-popover.popover
   // Only those popovers which are our direct children (spell documentation)
